[package]
name = "maelstrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.9", features = ["derive"] }
serde_json = "1.0.9"
tokio = { version = "1.9.0", features = ["full"] }
